# dashiell

./: .gitignore  CNAME  COMPILING.md  CONTRIBUTING.md  LICENSE.md  README.md  Vagrantfile  index.html  provision.sh
client/: CMakeLists.txt  main.cpp
client/cmake/: FindLibOsQuery.cmake
client/dashiell/: facter_worker.cpp  message.cpp  osquery_worker.cpp
client/include/: facter_worker.h  message.h  osquery_worker.h
client/tools/: make_package.sh
css/: bootstrap.min.css  dashiell.css
server/: index.js  package.json
server/lib/: message.js  message_status.js  query_router.js
server/public/: index.html
server/public/css/: site.css
server/public/js/: jquery-simplevalidator.js  site.js
